--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,19 @@
 ---
 ---
-<div class="pt-6 border-t-2 prose">
-Lavet med masser af <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline"><path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" /></svg> af Stefan
-</div>
+<div class="bg-black">
+    <section class=" pl-4  lg:grid lg:grid-cols-3 lg:text-center text-neutral-300 font-bold pt-10"> 
+        <div class=" pb-4 lg:pr-4">
+            <p>footer content 1 </p>
+        </div>
+        <div class=" pb-4">
+            <p>footer content 2</p>
+        </div>
+        <div class="lg:pl-4"> 
+            <p>footer content 3</p>
+        </div>
+    </section>
+    <section class="text-center text-neutral-300  font-bold pt-20 pb-10">
+        <p>copyright 2024</p>
+    </section>
+</di>
   
