--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -13,31 +13,18 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{Astro.props.title}</title>
 	</head>
-	<body class="pt-4 px-4">
+	<body class="pt-4 bg-neutral-300 ">
 
-		<header class="container max-w-2xl mx-auto pt-8">
+		<header class="container max-w-8xl mx-auto ">
 			<Header></Header>
 		</header>
 		
-		<main class="container max-w-2xl mx-auto pt-8">
+		<main class="container max-w-8xl mx-auto pt-8 px-4">
 			<slot />
 		</main>
 
-		<footer class="container max-w-2xl mx-auto pt-8">
+		<footer class=" pt-8">
 			<Footer></Footer>
 		</footer>
-
-		<div class="flex flex-row justify-end mt-8 stefanpopperop">
-			<img src="detergodt.png" alt="thumbs up, siger Stefan">
-		</div>
-			
 	</body>
 </html>
-<script>
-	import { inView } from "motion";
-
-	const stefanpopperop = document.querySelector(".stefanpopperop");
-	inView(stefanpopperop, () => {
-		stefanpopperop.classList.add("animate__animated", "animate__bounceInDown", "animate__delay-1s");
-	});	
-</script>
